fixed logos not showing up due to class name being blocked by ad blocks

--- a/src/components/Sponsors/Sponsors.css
+++ b/src/components/Sponsors/Sponsors.css
@@ -42,8 +42,7 @@
 
 }
 
-.sponsor-logo {
+.sponsor-logos {
     width: 144px;
     height: 144px;
-    border-radius: 72px;
 }
